[tool.poetry]
name = "piqe-ocp-lib"
version = "0.1.0"
description = "PIQE OpenShift Python Libraries."
authors = ["Red Hat"]
readme = "README.md"
keywords = ["openshift"]
repository = "https://github.com/piqe-test-libraries/piqe-ocp-lib"

[tool.poetry.dependencies]
python = "^3.6"
openshift = "^0.11.2"
pytest = "^6.2.2"
pytest-dependency = "^0.5.1"
pytest-xdist = "^2.2.1"
locust = "^1.4.3"
glusto = {git = "https://github.com/loadtheaccumulator/glusto.git", rev = "python3_port4"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-sugar = "^0.9.4"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vvv -s"
testpaths = ["piqe_ocp_lib/tests"]
markers = [
    "populate",
    "longevity",
    "cleanup"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
