[tool.poetry]
name = "piqe-ocp-lib"
version = "0.1.0"
description = "PIQE OpenShift Python Libraries."
authors = ["Red Hat"]
readme = "README.md"
keywords = ["openshift"]
repository = "https://github.com/piqe-test-libraries/piqe-ocp-lib"
packages = [
  { include = "piqe_ocp_lib/api" },
  { include = "piqe_ocp_lib/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
openshift = "*"
glusto = {git = "https://github.com/loadtheaccumulator/glusto.git", rev = "python3_port4"}
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-sugar = "^0.9.4"
black = "^20.8b1"
isort = "^5.7.0"
pytest-lazy-fixture = "^0.6.3"
pytest = "~=6.2.2"
pytest-dependency = "~=0.5.1"
pytest-xdist = "~=2.2"
ipdb = "^0.13.7"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -rxs"
testpaths = ["./piqe_ocp_lib/tests/resources"]
markers = [
    "populate",
    "longevity",
    "cleanup",
    "unit",
    "integration",
    "positive",
    "negative",
    "skip_if_not_provider",
    "requiresoperator"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
force_sort_within_sections = true
use_parentheses = true
combine_as_imports = true
known_first_party = ["piqe_ocp_lib"]
line_length = 120

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
